* Include (4.2.6p1) - [Bug 1464] synchronization source wrong for
  refclocks ARCRON_MSF (27) and SHM (28).
* Include (4.2.6p1) - Correct Windows port's refclock_open() to return 0
  on failure not -1.
* Include (4.2.6p1) - Correct CHU, dumbclock, and WWVB drivers to check
  for 0 returned from refclock_open() on failure.
* Correct "SIMUL=4 ./flock-build -1" to prioritize -1/--one.
(4.2.7p20) 2010/02/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1483] hostname in ntp.conf "restrict" parameter rejected.
* Use all addresses for each restrict by hostname.
* Use async DNS to resolve trap directive hostnames.
(4.2.7p19) 2010/02/09 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1338] Update the association type codes in ntpq.html.
* Include (4.2.6p1-RC5) - [Bug 1478] linking fails: EVP_MD_pkey_type.
* Include (4.2.6p1-RC5) - [Bug 1479] not finding readline headers.
* Include (4.2.6p1-RC5) - [Bug 1484] ushort is not defined in QNX6.
(4.2.7p18) 2010/02/07 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.6p1-RC5) - [Bug 1480] snprintf() cleanup caused 
  unterminated refclock IDs.
* Stop using getaddrinfo() to convert numeric address strings to on-wire
  addresses in favor of is_ip_address() alone.
(4.2.7p17) 2010/02/05 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.6p1-RC5) - [Bug 1477] First non-gmake make in clone
  w/VPATH can't make COPYRIGHT.
* Attempts to cure CID 108 CID 118 CID 119 TAINTED_SCALAR warnings.
* Broaden ylwrap workaround VPATH_HACK to all non-GNU make.
(4.2.7p16) 2010/02/04 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.6p1-RC4) - [Bug 1474] ntp_keygen LCRYPTO after libntp.a.
* Include (4.2.6p1-RC4) - Remove arlib.
(4.2.7p15) 2010/02/03 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.6p1) - [Bug 1455] ntpd does not try /etc/ntp.audio.
* Include (4.2.6p1) - Convert many sprintf() calls to snprintf(), also
  strcpy(), strcat().
* Include (4.2.6p1) - Fix widely cut-n-pasted bug in refclock shutdown